--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4,10 +4,14 @@
 // The main stylesheet for all of the styles!
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 @import 'variables';
-@import 'forms';
 
-@import 'style';
-@import 'move-popup';
-@import 'item-header';
-@import 'loadout-builder';
-@import 'vendors';
+@import 'shell';
+@import 'item';
+// @import 'forms';
+
+// @import 'style';
+// @import 'move-popup';
+// @import 'item-header';
+// @import 'loadout-builder';
+// @import 'vendors';
+// @import 'sidebar'
