--- a/app/scss/item.scss
+++ b/app/scss/item.scss
@@ -5,21 +5,56 @@ item, .item {
     position: relative;
     width: 3rem;
     height: 3rem;
-    background-size: 3rem;
+    background-size: 100%;
+  }
+
+  .badge {
+    position: absolute;
+    display: inline-block;
   }
 
   .stat {
-    position: absolute;
-    display: inline-block;
     bottom: 0;
     right: 0;
+    background-color: #fff;
+  }
+
+  .quality {
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    &.tier-0 {
+      background-color: #fff;
+    }
+
+    &.tier-1 {
+      background-color: hsl(0,85%,60%);
+    }
+
+    &.tier-2 {
+      background-color: hsl(20,85%,60%);
+    }
+
+    &.tier-3 {
+      background-color: hsl(60,85%,60%);
+    }
+
+    &.tier-4 {
+      background-color: hsl(120,85%,60%);
+    }
+
+    &.tier-5 {
+      background-color: hsl(190,85%,60%);
+    }
   }
 
   .element {
-    display: inline-block;
+    top: 0;
+    left: 0;
     width: 1rem;
     height: 1rem;
-    background-size: 1rem;
+    background-size: 100%;
   }
 
   &.arc {
