Added background color to image to fill space while image loads.

--- a/app/scss/item.scss
+++ b/app/scss/item.scss
@@ -3,6 +3,7 @@
   border: .125rem solid #fff;
   outline: none;
   margin: .125rem;
+  background-color: #bbb;
 
   &.complete {
     border-color: gold;
