--- a/app/views/best.html
+++ b/app/views/best.html
@@ -98,7 +98,7 @@
         </p>
         <p>
           <label>
-            <input id="includeRares" type="checkbox" ng-model="normal.showBlues" ng-change="normal.onModeChange()">
+            <input type="checkbox" ng-model="normal.showBlues" ng-change="normal.onModeChange()">
             <span>Include rare (blue) items</span>
           </label>
         </p>
@@ -135,16 +135,15 @@
     <p>Loading best sets ({{normal.progress*100 | number:2}}%)</p>
   </div>
   <div ng-show="normal.progress >= 1">
-    <div class="section loadout" ng-repeat="setType in normal.activeHighestSets">
-      <div><dim-stats stats="setType.tiers[normal.activesets].stats"></dim-stats><span class='dim-button' ng-click="normal.newLoadout(setType.set)">Create Loadout</span></div>
+    <!--<div class="section loadout" ng-repeat="set in normal.highestsets[normal.activesets] | orderBy:normal.setOrderValues | limitTo:10">--->
+    <div ng-repeat="setType in normal.highestsets">
+    <div class="section loadout" ng-if="setType.tiers[normal.activesets]">
+      <div><dim-stats stats="setType.set.stats"></dim-stats><span class='dim-button' ng-click="normal.newLoadout(setType.set)">Create Loadout</span></div>
       <div class="itemQuality">
         <div class="set-item" ng-repeat="armorpiece in setType.set.armor">
           <dim-min-max-item shift-click-callback="normal.excludeItem" item-data="armorpiece.item" store-data="normal.getStore(armorpiece.item.owner)"></dim-min-max-item>
           <dim-talent-grid class="smaller" dim-talent-grid="armorpiece.item.talentGrid" perks-only="true"></dim-talent-grid>
-          <div class="label"><small translate="{{setType.tiers[normal.activesets].configs[0][armorpiece.item.type] === 'int'? 'Intellect': (setType.tiers[normal.activesets].configs[0][armorpiece.item.type] === 'dis'? 'Discipline' : 'Strength')}}"></small></div>
-          <div class="other-configs" ng-if="$index > 0" ng-show="collapsedConfigs[$parent.$parent.$parent.$index]" ng-repeat="config in setType.tiers[normal.activesets].configs">
-            <small translate="{{config[armorpiece.item.type] === 'int'? 'Intellect': (config[armorpiece.item.type] === 'dis'? 'Discipline' : 'Strength')}}"></small>
-          </div>
+          <div class="label"><small>{{armorpiece.bonusType === 'int'? 'Intellect': (armorpiece.bonusType === 'dis'? 'Discipline' : 'Strength')}}</small></div>
         </div>
       </div>
       <div ng-show="setType.tiers[normal.activesets].configs.length > 1" class="expand-configs" ng-model="collapsedConfigs[$index]" ng-click="collapsedConfigs[$index]=!collapsedConfigs[$index]">
@@ -152,5 +151,6 @@
         <div ng-show="collapsedConfigs[$index]"><span title="Hide configurations"><i class="fa fa-caret-up"></i></span> Hide all configurations</div>
       </div>
     </div>
+  </div>
   </div>
 </div>
