Only show unique sets and provide a dropdown for configurations

--- a/app/scss/_loadout-builder.scss
+++ b/app/scss/_loadout-builder.scss
@@ -64,16 +64,26 @@
   }
   .label {
     text-align: center;
-    font-size: 10px;
+  }
+  .other-configs {
+    text-align: center;
   }
   .vendor-checkbox {
     margin: 0;
     margin-left: 10px;
   }
 
+  .loadout {
+    margin-bottom: 20px;
+  }
+
+  .expand-configs:hover {
+    color: #E8A534;
+    cursor: pointer;
+  }
+
   .itemQuality {
     width: 100%;
-    margin-bottom: 20px;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
