--- a/app/scss/_loadout-builder.scss
+++ b/app/scss/_loadout-builder.scss
@@ -5,6 +5,10 @@
   #includeVendors {
     vertical-align: middle;
   }
+  #includeRares {
+    vertical-align: middle;
+    margin-left: 0;
+  }
 
   .example {
     width: 10px;
