Add kill timer for scaled option in loadout builder

--- a/app/views/best.html
+++ b/app/views/best.html
@@ -98,7 +98,7 @@
         </p>
         <p>
           <label>
-            <input type="checkbox" ng-model="normal.showBlues" ng-change="normal.onModeChange()">
+            <input id="includeRares" type="checkbox" ng-model="normal.showBlues" ng-change="normal.onModeChange()">
             <span>Include rare (blue) items</span>
           </label>
         </p>
