--- a/app/views/changelog-toaster.html
+++ b/app/views/changelog-toaster.html
@@ -1,13 +1,12 @@
 
-<p>We've got a few bug fixes from this morning's release.</p>
+<p>We're celebrating another year of Destiny with our <a href="https://github.com/DestinyItemManager/DIM/wiki/DIM-%23YearTwoGear-Giveaway" target="_blank">#YearTwoGear Giveaway</a>. We're giving away six of our DCC shirts and our VERY last Blacksmith Shader.</p>
+<p>A few updates this week as we continue to catch up with the latest changes:</p>
 <ul style="margin: 0;padding:0;">
-  <li>Hawkmoon talent grid is fixed.</li>
-  <li>Moments of Triumph Record Book now shows progress.</li>
-  <li>New Item overlays (enabled in settings) have been restored.</li>
-  <li>Fixed an error while equipping a loadout.</li>
-  <li>Re-enabled stats until 9/19.</li>
-  <li>Loadout Builder works again!.</li>
+  <li>0% Quality Ratign should be removed from items.</li>
+  <li>Aim Assist shows up in the CSV.</li>
+  <li>Improved the ability for DIM to recognize a change in the manifest.</li>
 </ul>
+<p>We're still working on <a href="https://twitter.com/ThisIsDIM/status/775422136966144000" target="_blank">tag+notes</a> and it will be available soon!</p>
 <p>
   Our full <a href="https://github.com/DestinyItemManager/DIM/blob/master/CHANGELOG.md"
   target="_blank">changelog</a> is available if you would like to know more.
