--- a/app/scss/_style.scss
+++ b/app/scss/_style.scss
@@ -1553,6 +1553,7 @@ h2, h3, h4 {
   word-wrap: break-word;
   a, label {
     color: white;
+    color: #ffe5c3;
   }
   a:hover {
     color: #cccccc;
