--- a/app/views/changelog-toaster.html
+++ b/app/views/changelog-toaster.html
@@ -2,7 +2,7 @@
 <p>We're celebrating another year of Destiny with our <a href="https://github.com/DestinyItemManager/DIM/wiki/DIM-%23YearTwoGear-Giveaway" target="_blank">#YearTwoGear Giveaway</a>. We're giving away six of our DCC shirts and our VERY last Blacksmith Shader.</p>
 <p>A few updates this week as we continue to catch up with the latest changes:</p>
 <ul style="margin: 0;padding:0;">
-  <li>0% Quality Ratign should be removed from items.</li>
+  <li>0% Quality Rating should be removed from items.</li>
   <li>Aim Assist shows up in the CSV.</li>
   <li>Improved the ability for DIM to recognize a change in the manifest.</li>
 </ul>
