--- a/app/views/changelog-toaster.html
+++ b/app/views/changelog-toaster.html
@@ -1,12 +1,13 @@
 
-<p>We're celebrating another year of Destiny with our <a href="https://github.com/DestinyItemManager/DIM/wiki/DIM-%23YearTwoGear-Giveaway" target="_blank">#YearTwoGear Giveaway</a>. We're giving away six of our DCC shirts and our VERY last Blacksmith Shader.</p>
-<p>A few updates this week as we continue to catch up with the latest changes:</p>
+<p>Last planned update before Rise of Iron.</p>
 <ul style="margin: 0;padding:0;">
-  <li>0% Quality Rating should be removed from items.</li>
-  <li>Aim Assist shows up in the CSV.</li>
-  <li>Improved the ability for DIM to recognize a change in the manifest.</li>
+  <li>Restored armor ratings until 9/20 at 2AM Pacific.</li>
+  <li>Added more logic to pick up the latest manifest file in case of corruption.</li>
+  <li>Loadouts for multiplatform users will save items for both platforms when creating or editing a loadout.</li>
+  <li>Certain uses who have had broken images in DIM have been fixed.</li>
 </ul>
-<p>We're still working on <a href="https://twitter.com/ThisIsDIM/status/775422136966144000" target="_blank">tag+notes</a> and it will be available soon!</p>
+<p>We couldn't get tags+notes into DIM for Rise of Iron.  Issues with saving all the data, and syncing it.  We're still working on it.</p>
+<p>Have fun dancing with the wolves Guardians!</p>
 <p>
   Our full <a href="https://github.com/DestinyItemManager/DIM/blob/master/CHANGELOG.md"
   target="_blank">changelog</a> is available if you would like to know more.
