--- a/app/views/changelog-toaster.html
+++ b/app/views/changelog-toaster.html
@@ -1,13 +1,8 @@
 
-<p>Last planned update before Rise of Iron.</p>
+<p>We've got a few bug fixes from this morning's release.</p>
 <ul style="margin: 0;padding:0;">
-  <li>Restored armor ratings until 9/20 at 2AM Pacific.</li>
-  <li>Added more logic to pick up the latest manifest file in case of corruption.</li>
-  <li>Loadouts for multiplatform users will save items for both platforms when creating or editing a loadout.</li>
-  <li>Certain uses who have had broken images in DIM have been fixed.</li>
+  <li>Ornaments have been added to DIM.</li>
 </ul>
-<p>We couldn't get tags+notes into DIM for Rise of Iron.  Issues with saving all the data, and syncing it.  We're still working on it.</p>
-<p>Have fun dancing with the wolves Guardians!</p>
 <p>
   Our full <a href="https://github.com/DestinyItemManager/DIM/blob/master/CHANGELOG.md"
   target="_blank">changelog</a> is available if you would like to know more.
